@@ -1,0 +1,12 @@
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <gst/gst.h>
+#include "pitfdll.h"
+
+gboolean
+dmo_venc_register (GstPlugin * plugin)
+{
+  return TRUE;
+}
