@@ -1,3 +1,9 @@
+2005-08-30  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/pitfdll/Makefile.am:
+	* ext/pitfdll/dmo_venc.c: (dmo_venc_register):
+	  Dummy file, since real file appears missing.
+
 2005-08-12  Julien MOUTTE  <julien@moutte.net>
 
 	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_base_init),
